compiler-core/src/go/tests/snapshots/gleam_core__go__tests__consts__imported_ok.snap
---
source: compiler-core/src/go/tests/consts.rs
expression: "import gleam\n\npub type X {\n  Ok\n}\n\npub const y = gleam.Ok\n"
snapshot_kind: text
---
----- SOURCE CODE
import gleam

pub type X {
  Ok
}

pub const y = gleam.Ok


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

type Ok_c struct {}

func (c Ok_c) Hash() uint32 {return gleam_P.NilHash }
func (c Ok_c) Equal(o Ok_c) bool {
  _ = o
  return true
}

type X_t = Ok_c

var Y gleam_P.Func1_t[gleam_P.Type, gleam_P.Result_t[gleam_P.Type, gleam_P.Type]] = func(
    P_0 gleam_P.Type,
  ) gleam_P.Result_t[gleam_P.Type, gleam_P.Type] {
  return gleam_P.Ok_c[gleam_P.Type, gleam_P.Type]{P_0}
}
