compiler-core/src/go/tests/snapshots/gleam_core__go__tests__consts__literal_bool_does_not_get_constant_annotation.snap
---
source: compiler-core/src/go/tests/consts.rs
expression: "\n        pub const a = True\n        pub const b = False\n    "
snapshot_kind: text
---
----- SOURCE CODE

        pub const a = True
        pub const b = False
    

----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

var A gleam_P.Bool_t = true

var B gleam_P.Bool_t = false
